# diy-video-finder

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  ruff.toml  video_curator.py  video_curator_v2.py
.github/: copilot-instructions.md
.github/workflows/: curate-videos.yml  lint.yml
output/: index.html  script.js  styles.css
