[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diy-video-finder"
version = "0.1.0"
description = "Multilingual DIY Video Tutorial Aggregator - Find the best rated YouTube tutorials for home improvement"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
keywords = ["diy", "youtube", "tutorials", "crewai", "ai-agents", "multilingual"]

dependencies = [
    "crewai>=0.50.0",
    "crewai-tools>=0.10.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.0",
    "mypy>=1.0.0",
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "B",      # flake8-bugbear
    "S",      # bandit
    "I",      # isort
    "UP",     # pyupgrade
    "RUF",    # ruff-specific rules
]
ignore = ["E501"]  # Line length, handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
