[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diy-video-finder"
version = "0.1.0"
description = "Multilingual DIY Video Tutorial Aggregator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.50.0",
    "crewai-tools>=0.10.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "google-api-python-client>=2.100.0",
    "litellm>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.0",
    "mypy>=1.0.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = []
